[Python] Formatting output.

--- a/MISP.ipynb
+++ b/MISP.ipynb
@@ -17,13 +17,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Event: {\n",
+      "    \"uuid\": \"4df8e7dc-49a3-4a08-a586-5c5b3616982a\",\n",
+      "    \"info\": \"Test Event\",\n",
+      "    \"distribution\": \"0\",\n",
+      "    \"threat_level_id\": \"1\",\n",
+      "    \"analysis\": \"0\",\n",
+      "    \"published\": false,\n",
+      "    \"date\": \"2024-12-03\",\n",
+      "    \"id\": \"9\",\n",
+      "    \"orgc_id\": \"1\",\n",
+      "    \"org_id\": \"1\",\n",
+      "    \"timestamp\": \"1733254718\",\n",
+      "    \"publish_timestamp\": \"0\",\n",
+      "    \"sighting_timestamp\": \"0\",\n",
+      "    \"sharing_group_id\": \"0\",\n",
+      "    \"Org\": {\n",
+      "        \"id\": \"1\",\n",
+      "        \"name\": \"ADMIN\",\n",
+      "        \"uuid\": \"d0108972-fabc-4deb-9ab4-f26045dda3e0\"\n",
+      "    },\n",
+      "    \"Orgc\": {\n",
+      "        \"id\": \"1\",\n",
+      "        \"name\": \"ADMIN\",\n",
+      "        \"uuid\": \"d0108972-fabc-4deb-9ab4-f26045dda3e0\"\n",
+      "    },\n",
+      "    \"attribute_count\": \"1\",\n",
+      "    \"proposal_email_lock\": false,\n",
+      "    \"locked\": false,\n",
+      "    \"disable_correlation\": false,\n",
+      "    \"extends_uuid\": \"\"\n",
+      "}\n",
       "We did!\n"
      ]
     }
@@ -41,7 +72,7 @@
     "events = misp.events(pythonify=True)\n",
     "\n",
     "for e in events:\n",
-    "    print(f'Event: {e.to_json()}')\n",
+    "    print(f'Event: {e.to_json(indent=4)}')\n",
     "\n",
     "print('We did!')"
    ]
@@ -55,20 +86,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Event created; \"{\\\"uuid\\\": \\\"d6bd1328-bb34-4125-a530-a4d417efd7df\\\", \\\"info\\\": \\\"Event from a Jupyter Analysis\\\", \\\"distribution\\\": \\\"0\\\", \\\"threat_level_id\\\": \\\"1\\\", \\\"analysis\\\": \\\"0\\\", \\\"published\\\": false, \\\"date\\\": \\\"2024-12-03\\\", \\\"id\\\": \\\"8\\\", \\\"orgc_id\\\": \\\"1\\\", \\\"org_id\\\": \\\"1\\\", \\\"timestamp\\\": \\\"1733250554\\\", \\\"publish_timestamp\\\": \\\"0\\\", \\\"sharing_group_id\\\": \\\"0\\\", \\\"Org\\\": {\\\"id\\\": \\\"1\\\", \\\"name\\\": \\\"ADMIN\\\", \\\"uuid\\\": \\\"d0108972-fabc-4deb-9ab4-f26045dda3e0\\\", \\\"local\\\": true}, \\\"Orgc\\\": {\\\"id\\\": \\\"1\\\", \\\"name\\\": \\\"ADMIN\\\", \\\"uuid\\\": \\\"d0108972-fabc-4deb-9ab4-f26045dda3e0\\\", \\\"local\\\": true}, \\\"attribute_count\\\": \\\"0\\\", \\\"proposal_email_lock\\\": false, \\\"locked\\\": false, \\\"disable_correlation\\\": false, \\\"extends_uuid\\\": \\\"\\\", \\\"event_creator_email\\\": \\\"nazareno.duarte@gmail.com\\\"}\"\n"
+      "Event created; {\n",
+      "    \"uuid\": \"0f3aca12-dc48-459d-ac35-d8592b818f55\",\n",
+      "    \"info\": \"Event from a Jupyter Analysis\",\n",
+      "    \"distribution\": \"0\",\n",
+      "    \"threat_level_id\": \"1\",\n",
+      "    \"analysis\": \"0\",\n",
+      "    \"published\": false,\n",
+      "    \"date\": \"2024-12-03\",\n",
+      "    \"id\": \"10\",\n",
+      "    \"orgc_id\": \"1\",\n",
+      "    \"org_id\": \"1\",\n",
+      "    \"timestamp\": \"1733255368\",\n",
+      "    \"publish_timestamp\": \"0\",\n",
+      "    \"sharing_group_id\": \"0\",\n",
+      "    \"Org\": {\n",
+      "        \"id\": \"1\",\n",
+      "        \"name\": \"ADMIN\",\n",
+      "        \"uuid\": \"d0108972-fabc-4deb-9ab4-f26045dda3e0\",\n",
+      "        \"local\": true\n",
+      "    },\n",
+      "    \"Orgc\": {\n",
+      "        \"id\": \"1\",\n",
+      "        \"name\": \"ADMIN\",\n",
+      "        \"uuid\": \"d0108972-fabc-4deb-9ab4-f26045dda3e0\",\n",
+      "        \"local\": true\n",
+      "    },\n",
+      "    \"attribute_count\": \"0\",\n",
+      "    \"proposal_email_lock\": false,\n",
+      "    \"locked\": false,\n",
+      "    \"disable_correlation\": false,\n",
+      "    \"extends_uuid\": \"\",\n",
+      "    \"event_creator_email\": \"nazareno.duarte@gmail.com\"\n",
+      "}\n"
      ]
     }
    ],
    "source": [
     "from pymisp import MISPEvent\n",
-    "import json\n",
     "\n",
     "event = MISPEvent()\n",
     "event.distribution = '0'\n",
@@ -81,7 +143,7 @@
     "\n",
     "try:\n",
     "    created = misp.add_event(event, pythonify=True)\n",
-    "    print(f'Event created; {json.dumps(created.to_json(), indent=4)}')\n",
+    "    print(f'Event created; {created.to_json(indent=4)}')\n",
     "except Exception as e:\n",
     "    print(f'If we se this, an error ocurred {repr(e)}')"
    ]
@@ -95,14 +157,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Event: {\n",
+      "    \"uuid\": \"4df8e7dc-49a3-4a08-a586-5c5b3616982a\",\n",
+      "    \"info\": \"Test Event\",\n",
+      "    \"distribution\": \"0\",\n",
+      "    \"threat_level_id\": \"1\",\n",
+      "    \"analysis\": \"0\",\n",
+      "    \"published\": false,\n",
+      "    \"date\": \"2024-12-03\",\n",
+      "    \"id\": \"9\",\n",
+      "    \"orgc_id\": \"1\",\n",
+      "    \"org_id\": \"1\",\n",
+      "    \"timestamp\": \"1733254718\",\n",
+      "    \"publish_timestamp\": \"0\",\n",
+      "    \"sighting_timestamp\": \"0\",\n",
+      "    \"sharing_group_id\": \"0\",\n",
+      "    \"Org\": {\n",
+      "        \"id\": \"1\",\n",
+      "        \"name\": \"ADMIN\",\n",
+      "        \"uuid\": \"d0108972-fabc-4deb-9ab4-f26045dda3e0\"\n",
+      "    },\n",
+      "    \"Orgc\": {\n",
+      "        \"id\": \"1\",\n",
+      "        \"name\": \"ADMIN\",\n",
+      "        \"uuid\": \"d0108972-fabc-4deb-9ab4-f26045dda3e0\"\n",
+      "    },\n",
+      "    \"attribute_count\": \"1\",\n",
+      "    \"proposal_email_lock\": false,\n",
+      "    \"locked\": false,\n",
+      "    \"disable_correlation\": false,\n",
+      "    \"extends_uuid\": \"\"\n",
+      "}\n",
+      "Event: {\n",
+      "    \"uuid\": \"0f3aca12-dc48-459d-ac35-d8592b818f55\",\n",
+      "    \"info\": \"Event from a Jupyter Analysis\",\n",
+      "    \"distribution\": \"0\",\n",
+      "    \"threat_level_id\": \"1\",\n",
+      "    \"analysis\": \"0\",\n",
+      "    \"published\": false,\n",
+      "    \"date\": \"2024-12-03\",\n",
+      "    \"id\": \"10\",\n",
+      "    \"orgc_id\": \"1\",\n",
+      "    \"org_id\": \"1\",\n",
+      "    \"timestamp\": \"1733255368\",\n",
+      "    \"publish_timestamp\": \"0\",\n",
+      "    \"sighting_timestamp\": \"0\",\n",
+      "    \"sharing_group_id\": \"0\",\n",
+      "    \"Org\": {\n",
+      "        \"id\": \"1\",\n",
+      "        \"name\": \"ADMIN\",\n",
+      "        \"uuid\": \"d0108972-fabc-4deb-9ab4-f26045dda3e0\"\n",
+      "    },\n",
+      "    \"Orgc\": {\n",
+      "        \"id\": \"1\",\n",
+      "        \"name\": \"ADMIN\",\n",
+      "        \"uuid\": \"d0108972-fabc-4deb-9ab4-f26045dda3e0\"\n",
+      "    },\n",
+      "    \"attribute_count\": \"0\",\n",
+      "    \"proposal_email_lock\": false,\n",
+      "    \"locked\": false,\n",
+      "    \"disable_correlation\": false,\n",
+      "    \"extends_uuid\": \"\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "events = misp.events(pythonify=True)\n",
     "\n",
     "for e in events:\n",
-    "    print(f'Event: {json.dumps(e.to_json())}')"
+    "    print(f'Event: {e.to_json(indent=4)}')"
    ]
   },
   {
@@ -114,19 +245,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Event deleted: 434f0acf-97b3-458a-9fe8-675e686a515c\n",
-      "Event deleted: 97c46b1f-561b-46d5-b155-8453e98230d3\n",
-      "Event deleted: 1df72f8d-5055-44f0-b679-6be9edeb98e0\n",
-      "Event deleted: 5510c2c7-ba62-4559-8c03-74cd0b264eff\n",
-      "Event deleted: 6b8974e7-0aa9-4281-a93f-04fb553da849\n",
-      "Event deleted: d6bd1328-bb34-4125-a530-a4d417efd7df\n"
+      "Event deleted: 4df8e7dc-49a3-4a08-a586-5c5b3616982a\n",
+      "Event deleted: 0f3aca12-dc48-459d-ac35-d8592b818f55\n"
      ]
     }
    ],
